# investnest

./: package-lock.json  package.json  tsconfig.json
.next/cache/webpack/client-development/: index.pack.gz.old
.next/cache/webpack/client-development-fallback/: index.pack.gz.old
.next/cache/webpack/server-development/: index.pack.gz.old
.next/server/: server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/app/coin/[name]/: page.js  page_client-reference-manifest.js
.next/server/app/favicon.ico/: route.js
.next/server/vendor-chunks/: @swc.js  apexcharts.js  asynckit.js  axios.js  combined-stream.js  debug.js  delayed-stream.js  follow-redirects.js  form-data.js  has-flag.js  mime-db.js  mime-types.js  ms.js  next.js  object-assign.js  prop-types.js  proxy-from-env.js  react-apexcharts.js  react-is.js  supports-color.js
.next/static/chunks/: app-pages-internals.js  webpack.js
.next/static/chunks/app/: layout.js  page.js
.next/static/css/app/: layout.css
.next/static/webpack/: 005c7ccf520c9344.webpack.hot-update.json  webpack.005c7ccf520c9344.hot-update.js  webpack.a6ddddf2d4187b62.hot-update.js  webpack.e61d303b4a127d38.hot-update.js
.next/static/webpack/app/: layout.a6ddddf2d4187b62.hot-update.js
.next/types/app/: layout.ts  page.ts
.next/types/app/coin/[name]/: page.ts
backend/: .gitignore  details.txt  main.py
backend/cpp_backend/: .gitignore  CMakeLists.txt  Makefile  details.txt
backend/cpp_backend/app/: stock_client_sub.py  stock_server.cpp  stock_server_pub.cpp
backend/cpp_backend/app/examples/: stock_client.py
backend/cpp_backend/app/first_run/: stock_app.cpp  stock_main_send_data.py  stock_main_subscriber_asd.py  stock_main_subscriber_con.py  test_recv_order.cpp
backend/cpp_backend/app/main/: rest.py
backend/cpp_backend/include/common/: common.hpp  thread_safe_queue.hpp
backend/cpp_backend/include/order_match_service/: order_match_service.cpp  order_match_service.hpp
backend/cpp_backend/include/stock_service/: stock_service.cpp  stock_service.hpp  zero_mq_service.cpp  zero_mq_service.hpp
backend/cpp_backend/tests/: order_match_service_test.cpp  stock_service_test.cpp
backend/dev/new_protocol/exchange_service/: .gitignore  CMakeLists.txt  README.md
backend/dev/new_protocol/exchange_service/exchange_service/: CMakeLists.txt
backend/dev/new_protocol/exchange_service/exchange_service/include/common/: common.hpp
backend/dev/new_protocol/exchange_service/exchange_service/include/exchange_protocol/: exchange_protocol_net.hpp
backend/dev/new_protocol/exchange_service/exchange_service/include/net/: net_client.hpp  net_connection.hpp  net_message.hpp  net_server.hpp  net_tsqueue.hpp
backend/dev/new_protocol/exchange_service/exchange_service/include/order_match/: me_order_match_service.hpp
backend/dev/new_protocol/exchange_service/exchange_service/include/stock_service/: me_stock_service.hpp
backend/dev/new_protocol/exchange_service/exchange_service/src/: order_match_service_test.cpp  simple_client.cpp  simple_server.cpp
backend/extra/: main.py
backend/order/: models.py
backend/user/: models.py  user.py
frontend/: .env  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  top_300_coins_reduced.json  tsconfig.json  vercel.json
frontend/src/: middleware.js
frontend/src/Context/: Cyrpto.js
frontend/src/app/: globals.css  layout.tsx  page.js  page.tsx
frontend/src/app/api/chatbotcrypto/: route.js
frontend/src/app/api/cron/: route.js
frontend/src/app/api/crypto/: route.js
frontend/src/app/api/cyrpto/: route.js
frontend/src/app/api/profitloss/: route.js
frontend/src/app/api/profitnloss/: page.js
frontend/src/app/coin/: Coinchart.js
frontend/src/app/coin/[name]/: page.tsx
frontend/src/app/crypto/: CoinCompare.js  Compon.js  GlassyCard.js  LearningChat.js  VirtualPortfolio.js  page.js
frontend/src/app/crypto/watchlist/: page.js
frontend/src/app/data/: profit.js
frontend/src/app/highcharts/: page.js
frontend/src/app/highcharts/compare/: page.js
frontend/src/app/highcharts/dynamic/: page.js
frontend/src/app/livedata/: page.js
frontend/src/app/login/: page.js
frontend/src/app/personal/: CredCard.js  Planning.js  TransactionCard.js  page.js
frontend/src/app/personal/transactions/: BillEditForm.js  page.js
frontend/src/app/personaldashboard/: page.js  page.tsx
frontend/src/app/personaldashboard/transactions/: page.js
frontend/src/app/signup/: page.js
frontend/src/app/transactions/: page.js
frontend/src/app/verifyemail/: page.js
frontend/src/components/: Navbar.js
frontend/src/components/GlobalCyrpto/: Carousal.js  Chart.js  CoinTable.js  Filters.js  Pagination.js  Search.js
frontend/src/components/GlobalCyrpto/CoinDetails/: ChartDetails.js  ModalComponent.js
frontend/src/components/PersonalDashboard/: BillsForm.js  CardComponent.js  ChartDashboard.js  DashboardBox.js  ExpenseForm.js  IncomeForm.js  LearningDetails.js  Sidebar.js  TransactionComponent.js  WeeklySpendingPieChart.js  YoutubeVideos.js  a.txt
frontend/src/components/Shimmer/: ShimmerBarChart.js  ShimmerMonthChart.js
frontend/src/components/crypto/: CoinCompare.js  Compon.js  Glassy.js  LearningChat.js  Modal.js  VirtualPortfolio.js
frontend/src/dbConfig/: dbConfig.js
frontend/src/helpers/: getDataFromCookie.js  getDataFromToken.js  mailer.js
frontend/src/hooks/: getCoinTableData.js
frontend/src/models/: billingModel.js  coinwatchlistModel.js  planningModel.js  reminderModel.js  transactionModel.js  userModel.js  virtualCyrptoModel.js
frontend/src/utils/: localStorageCache.js
src/app/: globals.css  page.tsx
src/app/coin/: Coinchart.js
src/app/coin/[name]/: page.tsx
src/app/personaldashboard/: ChartDashboard.js  DashboardBox.js  WeeklySpendingPieChart.js  page.tsx
src/app/personaldashboard/dashboard/: Sidebar.js
src/components/: Navbar.tsx
src/components/GlobalCyrpto/: Carousal.js  Chart.js  CoinTable.js
src/hooks/: getCarousalData.js  getCoinTableData.js
(+26 files in other folders)
